--- a/locales/es.json
+++ b/locales/es.json
@@ -399,26 +399,26 @@
         "censussend": "Se ha enviado el censo correctamente",
         "preview": "Demo de cabina de votación",
         "modals": {
-          "createHeader": "Create election",
-          "createBody": "To create the election, its configuration is sent to the election authorities and they create election public encryption keys. After that, the election is no longer editable. Before doing this, please check that the configuration is correct (for example taking a look at the demo voting booth). If you need to change the election after this, you will have to create a new one.",
-          "confirmCreateButton": "Confirm and CREATE election",
-          "startHeader": "Start election",
-          "startBody": "Please be aware that once you start the elections, voters will be able to vote until the election is stopped",
-          "confirmStartButton": "Confirm and START the election",
-          "stopHeader": "Stop election",
-          "stopBody": "Once you stop the election, people will not be able to vote anymore.  Please be aware and exercise caution",
-          "confirmStopButton": "Confirm and STOP the election",
-          "tallyHeader": "Tally election",
-          "tallyBody": "The tally process is run by the election authorities and it might take a while, depending on the number of votes. It involves a mathematically verifiable cryptographic process that anonymizes and obtains the content of each vote.",
-          "confirmTallyButton": "Confirm and TALLY the election",
-          "publishResultsHeader": "Publish election results",
-          "publishResultsBody": "Currently only the election administrators have access to the calculated election results. When you publish the results, these will be made public for everyone to see.",
-          "confirmPublishResultsButton": "Confirm and PUBLISH election results",
-          "sendAuthCodesHeader": "Send authentication codes",
-          "sendAuthCodesBody": "This action will send a message to all the registered electors in the census. Note that sending many messages can be considered as SPAM, so proceed with caution. Also, please review first the message that will be sent.",
-          "confirmSendAuthCodesButton": "SEND authentication codes to ALL census",
-          "confirmSendAuthCodesIdsButton": "SEND authentication codes to SELECTED users",
-          "cancel": "Cancel"
+          "createHeader": "Crear votación",
+          "createBody": "Para crear la votación, su configuración es enviada a las autoridades y estas crean las claves públicas de la votación. Tras esto, la votación ya no es editable. Antes de proceder a realizar este paso, por favor comprueba que la configuración es correcta (por ejemplo comprobándolo en la cabina de votación de prueba). Si necesitas cambiar la votación pasado este paso, deberás crear una nueva.",
+          "confirmCreateButton": "Confirmar y CREAR la votación",
+          "startHeader": "Comenzar votación",
+          "startBody": "Por favor ten en cuenta que una vez que se comienza una votación, los votantes podrán votar hasta que no se para y así se termine el periodo de voto",
+          "confirmStartButton": "Confirmar y COMENZAR la votación",
+          "stopHeader": "Parar votación",
+          "stopBody": "Una vez se para la votación, los electores dejarán de poder votar. Por favor, tenlo en cuenta y procede con cuidado.",
+          "confirmStopButton": "Confirmar y PARAR la votación",
+          "tallyHeader": "Recuento de votos",
+          "tallyBody": "El proceso de recuento es llevado a cabo por las autoridades y podría tomar algún tiempo, dependiendo del número de votos. Incluye un proceso matemático criptográfico y matemáticamente verificable que anonimiza y obtiene el contenido de cada voto.",
+          "confirmTallyButton": "Confirmar y  comenzar el RECUENTO",
+          "publishResultsHeader": "Publicar resultados",
+          "publishResultsBody": "Hasta el momento solo los administradores de la votación han tenido acceso directo a los resultados calculados de la votación. Cuando se publican los resultados, se ponen a disposición pública para que cualquiera pueda verlos.",
+          "confirmPublishResultsButton": "Confirmar y PUBLICAR resultados",
+          "sendAuthCodesHeader": "Enviar códigos de autenticación",
+          "sendAuthCodesBody": "Esta votación enviará un mensaje a todos los electores registrados en el censo. Nótese que enviar muchos mensajes puede considerarse SPAM, así que procede con precaución. Además, por favor comprueba primero el texto del mensaje que vas a enviar.",
+          "confirmSendAuthCodesButton": "ENVIAR códigos de autenticación a TODO el censo",
+          "confirmSendAuthCodesIdsButton": "ENVIAR códigos de autenticación a los usuarios SELECCIONADOS",
+          "cancel": "Cancelar"
         }
     },
     "basic": {
@@ -427,12 +427,12 @@
         "description": { "label": "Descripción", "placeholder": "Descripción que se mostrará. Aquí debe de identificarse la organización que va a llevar el proceso electoral, así como los métodos de contacto con los electores." },
         "share": { "label": "Texto para compartir", "placeholder": "Texto para usar en los enlaces a redes sociales" },
         "layout": { "label": "Disposición", "placeholder": "Especifica cómo se va a mostrar toda la votación" },
-        "layouts": { "simple": "Simple", "2questions-conditional": "Sí/No", "pcandidates-election": "Table Candidates" },
+        "layouts": { "simple": "Simple", "2questions-conditional": "Sí/No", "pcandidates-election": "Tabla de candidatos" },
         "theme": { "label": "Tema", "placeholder": "¿Cómo se verá la votación?" },
-        "themes": { "default": "Por defecto", "podemos": "Purple" },
-        "questionOptionsSummary": "<strong>__num_answers__</strong> candidates. Voters select between <strong>__min__</strong> and <strong>__max__</strong> options (randomize: <strong>__random__</strong>) and there are <strong>__num_winners__</strong> winners. The tally method is <strong>__tally_method__</strong>.",
+        "themes": { "default": "Por defecto", "podemos": "Morado" },
+        "questionOptionsSummary": "<strong>__num_answers__</strong> candidatos. Los votantes seleccionan entre <strong>__min__</strong> y <strong>__max__</strong> opciones (orden aleatorio: <strong>__random__</strong>) y hay <strong>__num_winners__</strong> ganadores. El método de recuento es <strong>__tally_method__</strong>.",
         "censusSize": "__num__ personas",
-        "registerAndCreateElection": "Not only register the election, but also create it on the election authorities. This means you won't be able to modify the election."
+        "registerAndCreateElection": "No sólo registrar la votación, sino crearla en las autoridades de votación. Esto significa que ya no se podrá modificar la votación."
     },
     "questions": {
         "new": "Nueva pregunta",
@@ -469,7 +469,7 @@
           "accordion": "Normal",
           "circles": "Imágenes con detalles",
           "conditional-accordion": "Conditional Accordion",
-          "ahoram-primaries": "ahoram-primaries"
+          "ahoram-primaries": "Primarias AhoraM"
         },
         "option": {
           "textFieldLabel": "Texto",
@@ -492,73 +492,73 @@
         "reg": { "label": "Registro", "placeholder": "¿Cómo se genera el censo?" },
         "census": {
             "open": "Registro abierto",
-            "openDescription": "Census can not only be generated by election administrators, but also individuals can register following the authentication process.",
+            "openDescription": "El censo solo puede generarse por los administradores de la votación, pero cada individuo puede registrarse usando el proceso de registro.",
             "close": "Registro cerrado",
-            "closeDescription": "The census is generated by administrators. Third parties cannot register into the census. "
+            "closeDescription": "El censo es generado por los admistradores. Terceros no pueden registrarse en el censo."
           },
         "fields": {"label": "Campos extra", "placeholder": "Campos extra del votante"},
 
         "modals": {
-          "addCsvHeader": "Add CSV to census",
-          "addCsvBody": "Here you can add many people at once. The format is CSV, one person per line. Use semicolon to split fields, in order. Note that no data validation is done, so it's up to you to insert valid data.",
-          "addCsvTextareaPlaceholder": "one voter per line, keep the field order",
-          "confirmAddCsvButton": "Confirm and ADD CSV to census",
+          "addCsvHeader": "Añadir CSV al censo",
+          "addCsvBody": "Aqui puedes añadir muchas personas al censo de una tacada. El formato es CSV, con una persona por línea de texto. Se utiliza el punto y coma como separador de campos, en orden. Nótese que no se realiza validación alguna de los datos, así que es tu responsabilidad insertar datos correctos.",
+          "addCsvTextareaPlaceholder": "Un elector por línea, siguiendo el orden de los campos separando por punto y coma",
+          "confirmAddCsvButton": "Confirmar y AÑADIR CSV al censo",
 
-          "addPersonHeader": "Add Person to census",
-          "addPersonBody": "Manually add a single person to the census. Note that no data validation is done, so it's up to you to insert valid data.",
-          "confirmAddPersonButton": "Confirm and ADD person to census",
+          "addPersonHeader": "Añadir persona al censo",
+          "addPersonBody": "Manualmente añade una sola persona al censo. Nótese que no se realiza validación alguna de los datos, así que es tu responsabilidad insertar datos correctos.",
+          "confirmAddPersonButton": "Confirmar y AÑADIR persona al censo",
 
-          "removePeopleHeader": "Remove selected people from census",
-          "removePeopleBody": "Removing the selected __num__ people from the census is definitive. Note that this will not remove their votes if they have voted.",
-          "confirmRemovePeopleButton": "Confirm and REMOVE selected __num__ people from census",
+          "removePeopleHeader": "Eliminar personas seleccionadas del censo",
+          "removePeopleBody": "Eliminar a las __num__ personas seleccionadas del censo de forma definitiva. Nótese que esto NO eliminará sus votos si ya han votado.",
+          "confirmRemovePeopleButton": "Confirmar y ELIMINAR a las __num__ personas seleccionadas del censo",
 
-          "exportAllCensusHeader": "Export all census in CSV",
-          "exportAllCensusBody": "Here you can download the whole census in a CSV (Comma Separated Values) spreadsheet format, so that you can process it elsewhere. There are __total__ people in your census. Depending on the size of the census, the process of downloading the whole census can take a while. Once it finishes, you will be prompted to download the census. If you have any filter active, this filter will also be applied to the downloaded CSV file.",
-          "confirmexportAllCensusButton": "Confirm and download the census, with __total__ people"
+          "exportAllCensusHeader": "Exportar todo el censo en CSV",
+          "exportAllCensusBody": "Desde aquí puedes descargar la totalidad del censo en un fichero con formato de hoja de cálculo CSV (Comma Separated Values), de manera que puedes abrirlo y procesarlo autónomamente. Dependiendo del tamaño del censo, el proceso de descarga de todo el censo puede tomar un rato. Una vez ha terminado, se te mostrará la posibilidad de descargar el como un fichero. Si tienes algún filtro activo, este filtro también será aplicado al fichero CSV.",
+          "confirmexportAllCensusButton": "Confirmar y descargar el censo con un total de __total__ personas"
         },
-        "addPersonAction": "Add person..",
-        "addCsvAction": "Add CSV to census..",
-        "filteredEmptyResults": "No person matched the current filter.",
-        "emptyCensus": "Census is currently empty. You can add people through the Actions button.",
-        "removedCensusSuccessfully": "Removed selected people from census successfully",
-        "sentCodesSuccessfully": "Sent authentication codes successfully",
+        "addPersonAction": "Añadir persona..",
+        "addCsvAction": "Añadir CSV al censo..",
+        "filteredEmptyResults": "No se encontró a ninguna persona que coincida con el filtro.",
+        "emptyCensus": "El censo está actualmente vacío. Puedes añadir personas a través del botón de Acciones.",
+        "removedCensusSuccessfully": "Se eliminaron a las personas seleccionadas correctamente",
+        "sentCodesSuccessfully": "Enviados los códigos de autenticación correctamente",
 
         "voted": "votó",
         "notVoted": "no votó",
         "votedColumnHeader": "Votó?",
 
-        "censusadd": "Voters added to the census",
-        "actionsDropdown": "Actions",
+        "censusadd": "Votante añadido al censo",
+        "actionsDropdown": "Acciones",
         "selectAllShownAction": "Selectionar a todas las personas visibles",
         "deselectAllShownAction": "Deselectionar a todas las personas visibles",
-        "exportCensusAction": "Export all census to CSV..",
-        "removeCensusAction": "Remove __num__ selected people..",
-        "sendAuthCodesAction": "Send auth codes to __num__ selected..",
+        "exportCensusAction": "Exportar todo el censo en CSV..",
+        "removeCensusAction": "Eliminar los __num__ seleccionados..",
+        "sendAuthCodesAction": "Enviar códigos de autenticación a los __num__ seleccionados..",
         "idColumnHeader": "Id",
-        "selectedColumnHeader": "Select",
+        "selectedColumnHeader": "Seleccionar",
         "emailOption": "email",
-        "passwordOption": "password",
-        "codeOption": "code",
-        "textOption": "text",
-        "tlfOption": "tlf",
-        "intOption": "int",
-        "boolOption": "bool",
+        "passwordOption": "contraseña",
+        "codeOption": "código",
+        "textOption": "texto",
+        "tlfOption": "teléfono",
+        "intOption": "entero",
+        "boolOption": "booleano",
         "fieldRegExLabel": "Expresión regular",
-        "fieldRegExPlaceholder": "Advanced users only - Ejemplo: ^(1000|1010)$",
+        "fieldRegExPlaceholder": "Sólo usuarios avanzados - Ejemplo: ^(1000|1010)$",
         "captchaOption": "captcha",
-        "textareaOption": "textarea",
-        "configurationHeader": "Configuration",
-        "fieldTypeLabel": "Type",
+        "textareaOption": "cuadro de texto",
+        "configurationHeader": "Configuración",
+        "fieldTypeLabel": "Tipo",
         "fieldMinLabel": "Min",
         "fieldMaxLabel": "Max",
-        "fieldNameLabel": "Field name",
-        "fieldNamePlaceholder": "Example: Name and Surname",
-        "fieldHelpLabel": "Help text",
-        "fieldHelpPlaceholder": "Example: Insert both your name and surname",
-        "fieldRequiredAuthLabel": "Checked against census in authentication",
-        "fieldUniqueLabel": "Private (only administrators can see and use this field)",
-        "extraFieldsHeader": "Extra fields",
-        "extraFieldsInfo": "Here you can define extra fields in the census in a versatile way. This allows you to do a range of things: adding extra checks against census in closed registration, registering new fields in open registration, etc.",
+        "fieldNameLabel": "Nombre del campo",
+        "fieldNamePlaceholder": "Ejemplo: Nombre y Apellidos",
+        "fieldHelpLabel": "Texto de ayuda",
+        "fieldHelpPlaceholder": "Ejemplo: Inserta tanto tu nombre como apellidos",
+        "fieldRequiredAuthLabel": "Contrastar con el censo durante la autenticación",
+        "fieldUniqueLabel": "Privado (solo los administradores pueden ver y usar este campo)",
+        "extraFieldsHeader": "Campos extra",
+        "extraFieldsInfo": "Aqui puedes definir los campos extra del censo de una forma versátil. Esto te permite hacer un buen abanico de cosas: añadir comprobaciones extra al censo cuando el censo es cerrado, solicitar más campos de registro cuando el censo es abierto, etc.",
         "manage": "Administrar censo",
         "name": "Nombre",
         "required": "Obligatorio",
