add initial support for key-value private fields

--- a/locales/es.json
+++ b/locales/es.json
@@ -556,6 +556,7 @@
         "fieldRegExPlaceholder": "Sólo usuarios avanzados - Ejemplo: ^(1000|1010)$",
         "captchaOption": "captcha",
         "textareaOption": "cuadro de texto",
+        "dictOption": "Clave-valor",
         "configurationHeader": "Configuración",
         "fieldTypeLabel": "Tipo",
         "fieldMinLabel": "Min",
