admin census: adding sorting/filtering to active column

--- a/locales/en.json
+++ b/locales/en.json
@@ -594,6 +594,7 @@
     "columnFilter": {
       "sort": "Sort:",
       "filter": "Filter:",
+      "noFilter": "No",
       "noSort": "No",
       "sortAsc": "Asc",
       "sortDesc": "Desc",
