admin census: initial version of datetime filter and created datetime filtering in census, not working yet

--- a/locales/en.json
+++ b/locales/en.json
@@ -594,6 +594,8 @@
     "columnFilter": {
       "sort": "Sort:",
       "filter": "Filter:",
+      "minDate": "From:",
+      "maxDate": "To:",
       "noFilter": "No",
       "noSort": "No",
       "sortAsc": "Asc",
