--- a/locales/es.json
+++ b/locales/es.json
@@ -598,6 +598,8 @@
     "columnFilter": {
       "sort": "Orden:",
       "filter": "Filtro:",
+      "minDate": "Desde:",
+      "maxDate": "Hasta:",
       "noFilter": "No",
       "noSort": "No",
       "sortAsc": "Asc",
