--- a/locales/es.json
+++ b/locales/es.json
@@ -252,7 +252,7 @@
     "registerAdminFormHelpTitle": "Registrándote para crear votaciones",
     "fillValidFormText": "Para poder enviar el formulario, primero rellena correctamente todos los campos.",
     "invalidRegisterData": "No ha sido posible registrarte con los datos aportados. <strong>Lo más probable es que ya estés registrado, <a href=\"__url__\">accede usando tus credenciales pinchando aquí</a></strong>. También puede que el periodo de votación haya finalizado. Comprueba todo lo anterior, y en caso de que sigas teniendo problemas, revisa tus datos, o ponte en contacto con los administradores de la votación,",
-    "invalidRegisterDNI": "No ha sido posible registrarte con los datos aportados. <strong>HAs insertado un número de DNI inválido</strong>. Por favor, revísalo.",
+    "invalidRegisterDNI": "No ha sido posible registrarte con los datos aportados. <strong>Has insertado un número de DNI inválido</strong>. Por favor, revísalo.",
     "logout": "Salir",
     "codeLabel": "Código de Autenticación",
     "codePlaceholder": "Introduce el código",
