gl i18n: minor changes

--- a/locales/gl.json
+++ b/locales/gl.json
@@ -240,7 +240,7 @@
   },
   "avRegistration": {
     "loginHeader": "Entrar na túa conta de Agora Voting",
-    "helpRegisterForm": "Para poder votar, tes que rexistrarche primeiro mediante este formulario. Algúns dos campos son obrigatorios: le ben a información de axuda",
+    "helpRegisterForm": "Para poder votar, tes que rexistrarte primeiro mediante este formulario. Algúns dos campos son obrigatorios: le ben a información de axuda",
     "helpAdminRegisterForm": "Para poder crear votacións tes que rexistrarche primeiro mediante este formulario. Le ben a información de axuda",
     "registerFormHelpTitle": "Rexistrándote para votar",
     "registerAdminFormHelpTitle": "Rexistrándote para crear votacións",
@@ -262,9 +262,9 @@
     "emailPlaceholder": "fulanito@exemplo.com",
     "passwordLabel": "Contrasinal",
     "passwordPlaceholder": "Contrasinal",
-    "notRegisteredYet": "Aínda non che rexistraches?",
+    "notRegisteredYet": "Aínda non te rexistraches?",
     "registerHere": "Rexí­strate aquí",
-    "fewMinutes": "Só levarache uns minutos",
+    "fewMinutes": "Levarache só uns minutos",
     "createElection": "Buscas crear unha votación?",
     "takeLook": "Bota unha ollada á",
     "step": "guia paso a paso",
